test/types/records/lydia/recordOffset-badField.prediff
#!/bin/bash

outfile=$2

sed -e "s:\CTypes\.chpl\:[0-9]*:CTypes\.chpl\:xyz:g" $outfile > $outfile.tmp
cp $outfile.tmp $outfile
